# django-zanwango

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
zanwango/: generics.py  mixins.py  viewsets.py
