[tool.poetry]
name = "zanwango"
version = "0.1.0"
description = ""
authors = ["JorgeMira <jorge.mira.yague@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=4.2"
django-ninja = ">=1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
