[tool.poetry]
name = "zanwango"
version = "0.1.0"
description = ""
authors = ["JorgeMira <jorge.mira.yague@gmail.com>"]
readme = "README.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
django = ">=4.2"
django-ninja = ">=1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"

[tool.ruff]
target-version = "py310"
fix = true

[tool.ruff.lint]
select = [
    "A",    # flake8-builtins
    "B",    # flake8-bugbear
    "C",    # flake8-comprehensions
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "FURB", # refurb
    "I",    # isort
    "N",    # pep8-naming
    "PTH",  # flake8-use-pathlib
    "RUF",  # ruff
    "SIM",  # flake8-simplify
    "T20",  # flake8-print
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
ignore = [
    "B008",   # do not perform function calls in argument defaults
    "C901",   # too complex
    "E501",   # line too long
    "RUF012", # annotated mutable class attributes
]
